<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_service"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textAllCaps="true"
            android:textSize="@dimen/app_textsize_large"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/terms_date"
            android:textAlignment="center"
            android:textSize="@dimen/app_textsize_semi_regular"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txtPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_description"/>

    </LinearLayout>
</ScrollView>