<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >

    <RelativeLayout
        android:id="@+id/rela_content"
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            app:srcCompat="@drawable/blackbookimg" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/yellowbutton"
            android:textSize="@dimen/app_textsize_regular"
            android:text="@string/str_exit"
            android:layout_marginTop="57dp"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/btn_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/yellowbutton"
            android:textSize="@dimen/app_textsize_regular"
            android:text="@string/str_contactus"
            android:layout_below="@+id/btn_exit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp" />

        <Button
            android:id="@+id/btn_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/yellowbutton"
            android:textSize="@dimen/app_textsize_regular"
            android:text="@string/str_start_another"
            android:layout_below="@+id/btn_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp" />

    </RelativeLayout>

</ScrollView>

