<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"  >

    <RelativeLayout
        android:id="@+id/rela_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rela_editext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:singleLine="true"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:paddingLeft="8dp"
                android:textSize="@dimen/app_textsize_semi_regular"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:background="@drawable/editback"
                android:hint="@string/str_name"
                android:textColorHint="@color/textgrey"
                android:textColor="@color/color_black"/>

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:singleLine="true"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:paddingLeft="8dp"
                android:textSize="@dimen/app_textsize_semi_regular"
                android:background="@drawable/editback"
                android:hint="@string/str_email"
                android:textColorHint="@color/textgrey"
                android:layout_below="@+id/edt_name"
                android:layout_marginTop="10dp"
                android:textColor="@color/color_black"/>


            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/editback"
                android:paddingLeft="8dp"
                android:hint="@string/str_phone"
                android:inputType="phone"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textColorHint="@color/textgrey"
                android:layout_below="@+id/edt_email"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/app_textsize_semi_regular" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rela_saveprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rela_editext"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/btn_save_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/yellowbutton"
                android:layout_centerInParent="true"
                android:textSize="@dimen/app_textsize_regular"
                android:text="@string/str_save_profile"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>

