<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rela_questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <TextView
                android:id="@+id/txt_question_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:text="1) How likely are you to renew this agreement? (Optional)"
                android:textColor="@color/color_black"
                android:textSize="@dimen/app_textsize_semi_regular" />

            <RelativeLayout
                android:id="@+id/rela_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_question_title"
                android:layout_margin="10dp"
                android:gravity="center">

                <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                    android:id="@+id/sbSelection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:dsb_allowTrackClickToDrag="false"
                    app:dsb_indicatorTextAppearance="@style/CustomFloaterTextAppearance"
                    app:dsb_progressColor="@android:color/black"
                    app:dsb_indicatorColor="@android:color/black"
                    app:dsb_rippleColor="#FFFFFF"
                    app:dsb_indicatorFormatter="%d"
                    app:dsb_max="10"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
    android:id="@+id/rela_navigation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/color_white">

    <Button
        android:id="@+id/btn_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="10dp"
        android:text="@string/str_previous"
        android:minWidth="100dp"
        android:theme="@style/MyButton"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/txt_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/color_black"
        android:textSize="@dimen/app_textsize_regular" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="10dp"
        android:text="@string/str_next"
        android:minWidth="100dp"
        android:theme="@style/MyButton"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/imgfinish"
        android:visibility="gone"
        android:minWidth="100dp"
        android:theme="@style/MyButton"
        android:textColor="@android:color/white"
        android:text="@string/str_finish" />
    </RelativeLayout>

</RelativeLayout>